@@ -274,19 +274,38 @@ class AnonymousUser(User):
 class PostQuery(db.Query):
     """Add some extra methods to the post model."""
 
-    def lightweight(self, deferred=None, lazy=('comments',)):
+    def lightweight(self, deferred=None, lazy=None):
         """Send a lightweight query which deferes some more expensive
         things such as comment queries or even text and parser data.
         """
-        args = map(db.lazyload, lazy or ())
+        if lazy is None:
+            lazy = ('comments',)
+        args = map(db.lazyload, lazy)
+        undefer_comment_count = 'comments' in lazy
         if deferred:
+            deferred = set(deferred)
+            if 'comment_count' in deferred:
+                undefer_comment_count = False
+                deferred.remove('comment_count')
             args.extend(map(db.defer, deferred))
         # undefer the _comment_count query which is used by comment_count
         # for lightweight post objects.  See Post.comment_count for more
         # details.
-        if lazy and 'comments' in lazy:
+        if undefer_comment_count:
             args.append(db.undefer('_comment_count'))
         return self.options(*args)
+
+    def theme_lightweight(self, key):
+        """A query for lightweight settings based on the theme.  For example
+        to use the lightweight settings for the author overview page you can
+        use this query::
+
+            Post.query.theme_lightweight('author_overview')
+        """
+        theme_settings = get_application().theme.settings
+        deferred = theme_settings.get('sql.%s.deferred' % key)
+        lazy = theme_settings.get('sql.%s.lazy' % key)
+        return self.lightweight(deferred, lazy)
 
     def type(self, content_type):
         """Filter all posts by a given type."""
